Support history on desktop (#84)